fixing spacing on case studies

--- a/pages/Services.module.scss
+++ b/pages/Services.module.scss
@@ -180,8 +180,8 @@
               margin-bottom: 0;
             }
 
-            .title {
-              @extend .subheading;
+            .subtitle {
+              margin-bottom: 0;
             }
 
             .description {
